# vertix-backend

./: .dockerignore  .env  .env.example  .gitignore  Cargo.toml  Dockerfile  GOOGLE_OAUTH_SETUP.md  README.md  calculate_signature.rs  check_events.js  decode_event.js  schema.sql
abis/: VertixNFT.json  crosschainbridge_abi.json  crosschainregistry_abi.json  marketplaceauctions_abi.json  marketplacecore_abi.json  marketplacefees_abi.json  marketplaceproxy_abi.json  marketplacestorage_abi.json  vertixescrow_abi.json  vertixgovernance_abi.json  vertixnft_abi.json
migrations/: 20250116000001_add_created_at_index_to_collections.sql  20250120000000_create_blockchain_events.sql  20250120000001_create_listings_table.sql  20250120000001_create_users_table.sql  20250120000002_create_refresh_tokens_table.sql  20250120000003_create_collections_table.sql  20250120000004_create_listing_events_tables.sql  20250120000004_create_nft_mint_events_table.sql  20250120000005_consolidate_listings_table.sql  20250120000005_create_nft_listing_events_table.sql  20250120000006_create_nft_sale_events_table.sql  20250120000007_create_nft_delisting_events_table.sql  20250120000008_create_social_media_nft_events_table.sql  20250120000009_create_blockchain_events_table.sql  20250120000010_create_nonces_table.sql  20250120000014_create_chain_starting_blocks_table.sql  20250120000015_add_royalty_recipient_to_nft_mint_events.sql  20250120000016_add_collection_metrics.sql  20250515153322_create_table.sql
scripts/: Cargo.toml  deploy_testnets.sh  setup_local.sh
scripts/src/: main.rs
src/: auth.rs  config.rs  db.rs  lib.rs  main.rs  middleware.rs  models.rs  routes.rs  services.rs
src/api/: errors.rs  mod.rs  validation.rs
src/api/dto/: auth_dto.rs  mod.rs  user_dto.rs
src/api/middleware/: auth.rs
src/api/v1/: admin.rs  auth.rs  contracts.rs  mod.rs  routes.rs  users.rs
src/application/: mod.rs
src/application/services/: admin_service.rs  auth_service.rs  contract_service.rs  mod.rs
src/application/traits/: mod.rs
src/application/use_cases/: connect_wallet.rs  create_nonce.rs  get_user_profile.rs  login_user.rs  mod.rs  register_user.rs  update_profile.rs
src/domain/: models.rs  services.rs
src/handlers/: routes.rs
src/infrastructure/: mod.rs
src/infrastructure/contracts/: addresses.rs  admin_client.rs  client.rs  config.rs  event_utils.rs  mod.rs  types.rs
src/infrastructure/contracts/abis/: mod.rs
src/infrastructure/contracts/addresses/: addresses.rs  addresses_anvil.rs  addresses_base_sepolia.rs  deployed_addresses.json  deployed_addresses_anvil.json  deployed_addresses_base_sepolia.json
src/infrastructure/contracts/utils/: mod.rs  verification.rs
src/infrastructure/db/: postgres.rs
src/infrastructure/repositories/: blockchain_events_repository.rs  collections_repository.rs  listing_repository.rs  mod.rs  nft_events_repository.rs  nft_listing_events_repository.rs  refresh_token_repository.rs  social_media_events_repository.rs  user_repository.rs
src/infrastructure/services/: block_scanner.rs  mod.rs
src/infrastructure/workers/: blockchain_listener.rs  ipfs_manager.rs  job_queue.rs  mod.rs  multi_chain_listener.rs
src/tests/: admin_tests.rs  auth_tests.rs  contract_tests.rs  mod.rs  validation_tests.rs
src/utils/: uint96.rs
