[package]
name = "vertix-backend"
version = "0.1.0"
edition = "2024"
default-run = "vertix-backend"

[[bin]]
name = "vertix-backend"
path = "src/bin/main.rs"

[[bin]]
name = "test_runner"
path = "src/bin/test_runner.rs"

[[bin]]
name = "test_multi_chain_listener"
path = "src/bin/test_multi_chain_listener.rs"

[dependencies]
axum = "0.8.4"
tokio = { version = "1.35.1", features = ["full"] }
tower ={ version = "0.4.13", features = ["full"] }
serde = { version = "1.0.195", features = ["derive"] }
reqwest = { version = "0.11", features = ["json", "multipart"] }
dotenvy = "0.15.7"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tower-http = {version = "0.6.6", features = ["full"] }
sqlx = { version = "0.7.4", features = ["runtime-tokio", "postgres", "uuid", "runtime-tokio-native-tls", "chrono"] }
bcrypt = "0.15.1"
jsonwebtoken = "9.3.1"
oauth2 = "4.4.2"
serde_json = "1.0.143"
uuid = { version = "1.18.0", features = ["v4", "serde"] }
chrono = { version = "0.4.41", features = ["serde"] }
dotenv = "0.15.0"
ethers-core = "2.0.14"
ethers = {version = "2.0.14", features = ["legacy", "abigen", "ws"] }
hex = "0.4.3"
sha3 = "0.10.8"
redis = "0.21"
dns-lookup = "1.0"
trust-dns-resolver = "0.23.2"
argon2 = "0.5.3"
thiserror = "2.0.16"
async-trait = "0.1.89"
urlencoding = "2.1"
backtrace = "0.3"
alloy = { version = "1.0.25", features = ["full"] }
regex = "1.11.2"
rand = "0.8.5"
sha2 = "0.10.9"
lazy_static = "1.5.0"
futures-util = "0.3.30"
futures = "0.3.30"
